# java_gradescope_autograder_helper

./: .gitignore  LICENSE  MANIFEST.in  PERSONAL.md  README.md  pyproject.toml  setup.py
java_gradescope_auto_grader_helper/: README.md  cli.py  compiler.py  helpers.py  loader.py  test_runner.py
java_gradescope_auto_grader_helper/checkstyle/: bowdoin_checks.xml  checkstyle.py
src/java_gradescope_autograder_helper/: cli.py  compiler.py  helpers.py  init_autograder.py  loader.py  run_autograder.py  test_runner.py  zip_autograder.py
src/java_gradescope_autograder_helper/checkstyle/: checkstyle.py
src/java_gradescope_autograder_helper/examples/autograder/: run_autograder
src/java_gradescope_autograder_helper/examples/autograder/results/: del.txt  results.json
src/java_gradescope_autograder_helper/examples/autograder/source/: run_autograder  setup.sh  tests.py
src/java_gradescope_autograder_helper/examples/autograder/source/reference_solution/: Main.java
src/java_gradescope_autograder_helper/examples/autograder/submission/: Main.java
