[project]
name = "java-gradescope-autograder-helper"
version = "1.2.0"
description = "A helper package for setting up Gradescope autograder tests for Java projects"
readme = "README.md"
license = { file = "LICENSE" }
pyversions = ">=3.10.6"
url="https://github.com/rafaelolal/java_gradescope_autograder_helper"
requires-python = ">=3.10.6"

authors = [
    { name = "Rafael Almeida", email = "github@ralmeida.dev" }
]

dependencies = []

[project.scripts]
autograder = "java_gradescope_autograder_helper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "java-gradescope-autograder-helper",
]

[tool.uv.sources]
java-gradescope-autograder-helper = { workspace = true }
